apps/william-teste/base/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: william-teste
  labels:
    kubernetes.io/metadata.name: william-teste
    backstage.io/kubernetes-id: william-teste
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
