apps/william-teste/base/william-teste-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: william-teste-svc
  namespace: william-teste
  annotations:
    external-dns.alpha.kubernetes.io/hostname: william-teste.diegoluisi.eti.br
  labels:
    app: william-teste
    version: 0.0.1
    backstage.io/kubernetes-id: william-teste
spec:
  type: ClusterIP
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: william-teste
