apps/william-teste/base/william-teste-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: william-teste-vs
  namespace: william-teste
  labels:
    app: william-teste
    version: 0.0.1
    backstage.io/kubernetes-id: william-teste
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - william-teste.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: william-teste-svc
      weight: 100
